backport: re PR c++/87506 (ICE with inherited constexpr constructor with const argument)

Backported from mainline
	2018-12-07  Jakub Jelinek  <jakub@redhat.com>

	PR c++/87506
	* constexpr.c (adjust_temp_type): Handle EMPTY_CLASS_EXPR.

	* g++.dg/cpp0x/constexpr-87506.C: New test.

From-SVN: r275075